Fix spacing in shell nav

--- a/src/app/components/shell/shell-nav.styl
+++ b/src/app/components/shell/shell-nav.styl
@@ -58,7 +58,7 @@ ul.shell-nav
 			display: block
 			color: $shell-nav-item-color
 			user-select: none
-			padding: 0 7px
+			padding: 0 15px
 			padding-left: 0
 			line-height: $shell-nav-item-height
 
@@ -122,7 +122,7 @@ ul.shell-nav ul
 	margin-top: $font-size-base * 2
 	margin-bottom: ($font-size-base / 2)
 	margin-left: 15px
-	margin-right: 7px
+	margin-right: 15px
 
 	&.first
 		margin-top: $font-size-base
@@ -161,7 +161,7 @@ ul.shell-nav ul
  * Nav controls
  */
 .nav-controls
-	padding: 0 7px 0 15px
+	padding: 0 15px 0 15px
 
 	& > .form-control, & > .button
 		margin-bottom: $font-size-base
